--- a/package.json
+++ b/package.json
@@ -14,18 +14,24 @@
   "dependencies": {
     "@ai-sdk/mcp": "^0.0.11",
     "@ai-sdk/openai": "^2.0.75",
+    "@modelcontextprotocol/sdk": "^1.24.1",
     "ai": "^5.0.105",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.0",
+    "openai": "^6.9.1",
     "playwright": "^1.57.0",
-    "ws": "^8.18.3"
+    "ws": "^8.18.3",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
     "@types/node": "^24.10.1",
     "@types/ws": "^8.18.1",
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
 }
